--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 profile pic/blazer/imjoshellis-profile-pic.psd
 profile pic/black shirt/imjoshellis-profile-pic.psd
+banners/rmnp/DSCF3435.psd
+bios/misc.txt
