--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ profile pic/blazer/imjoshellis-profile-pic.psd
 profile pic/black shirt/imjoshellis-profile-pic.psd
 banners/rmnp/DSCF3435.psd
 bios/misc.txt
+profile pic/blazer green bg/20200902-DSC02152.psd
